# poppler-pdf

./: .gitlab-ci.yml  CMakeLists.txt  NEWS  README.contributors  README.md  poppler-cpp.pc.cmake  poppler-glib.pc.cmake  poppler-qt5.pc.cmake  poppler-qt6.pc.cmake  poppler.pc.cmake
cpp/: CMakeLists.txt  poppler-global.h  poppler-image-renderer.cpp  poppler-image-renderer.h  poppler-page.cpp  poppler-page.h
fofi/: FoFiBase.h  FoFiEncodings.h  FoFiIdentifier.h  FoFiTrueType.h  FoFiType1.h  FoFiType1C.h
glib/: CMakeLists.txt  poppler-action.cc  poppler-action.h  poppler-annot.cc  poppler-annot.h  poppler-attachment.cc  poppler-form-field.cc  poppler-form-field.h  poppler-media.cc  poppler-media.h  poppler-page.cc  poppler-page.h  poppler-private.h  poppler.h
glib/reference/: CMakeLists.txt  poppler-docs.sgml  poppler-sections.txt
goo/: GooString.h  GooTimer.h  ImgWriter.h  JpegWriter.h  NetPBMWriter.h  PNGWriter.h  TiffWriter.h  gbase64.h  gbasename.h  gdir.h  gfile.cc  gfile.h  glibc.h  grandom.h  gstrtod.h
plotlib/: HersheyDirectory.cc  HersheyDirectory.h  HersheyFont.cc  HersheyFont.h  HersheyUnicodeSubstitutions.cc  HersheyUnicodeSubstitutions.h  Plot.cc  Plot.h  PlotClip.cc  PlotClip.h  PlotEmitHpgl.cc  PlotEmitHpgl.h  PlotEmitSvg.cc  PlotEmitSvg.h  README.md  StrokeOutputDev.cc  StrokeOutputDev.h
poppler/: Annot.cc  Annot.h  Array.h  BBoxOutputDev.cc  BBoxOutputDev.h  CMap.h  CachedFile.h  CairoFontEngine.cc  CairoFontEngine.h  CairoOutputDev.cc  CairoOutputDev.h  Catalog.cc  Catalog.h  CertificateInfo.h  CharCodeToUnicode.h  CurlCachedFile.h  DCTStream.cc  (+101 more)
(+77 files in other folders)
